# genAI_agent

./: .gitignore  README.md  architecture.md  test.db
i-bot/: README.md  client.py  docker-compose.yml  documents.txt  init_db.py  populate_vectorstore.py  pyproject.toml  requirements.txt
i-bot/src/: config.py  database.py  main.py  models.py  rag.py  schemas.py  tools.py
i-bot/src/graph/: builder.py  nodes.py  state.py
i-bot/tests/: conftest.py  test_features.py  test_main.py
